fea: added mobile navigation's screen

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,8 +3,8 @@
     /* font-family: 'Vollkorn SC', serif; */
 
 * {
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     color:var(--text)
   }
 
@@ -74,6 +74,7 @@ ul{
     justify-content: space-between;
     align-items: center;
   }
+
   .logo a{
       font-size: 3rem;
       font-weight: 900;
@@ -86,11 +87,34 @@ ul{
       justify-content: space-evenly;
       
   }
-
+  .nav-menu-mobile{
+     display:none;
+     padding-top: 5rem;
+     position:absolute;
+     left:0;
+     width:100vw;
+     flex-direction: column;
+     margin:0;
+     background-color: var(--primary);
+     border-radius: 0 0 4px  4px;
+ } 
   .nav-menu li{
+    
     font-weight: 900;
     margin: 1rem;
+  } 
+   .nav-menu-mobile li{
+    font-size: 2.75rem;
+    color: white;
+    padding:0.5rem 0 0 3rem;
+    position: relative;
+} 
+
+
+  #menu-icon, .close-icon{
+     display:none;
   }
+
 
   .hero{
       display:flex;
@@ -103,6 +127,7 @@ ul{
 
       
   }
+
   .hero-heading{
       font-weight: 900;
       text-align: center;
@@ -116,6 +141,7 @@ ul{
   button{
       margin:1rem;
   }
+
   .btn-primary{
       font-family: inherit;
       font-size: inherit;
@@ -162,6 +188,7 @@ ul{
     width:100%; 
     height:100%;
 }
+
 @media screen and (max-width : 640px){
 
     html{
@@ -172,8 +199,20 @@ ul{
         grid-template-columns: 100%;
     }
 
-    .side-bar{
-        display:none;
+    .side-bar, .nav-menu{
+      display:none;
+    }
+    
+
+
+  
+    .close-icon{
+        position:absolute;
+        /* right:1rem;*/
+    } 
+
+    #menu-icon{
+        display:inline-block;
     }
 }
 
