--- a/CSS/docs.css
+++ b/CSS/docs.css
@@ -24,7 +24,7 @@
     display: flex;
     background-color: var(--background);
     border-radius: 4px;
-    background-color: #F5F7F9;
+    background-color: var(--example-bg);
     justify-content: space-around;
     align-items: center;
     padding: 1rem;
