fea: added alert and button component
shifted the previous css of button element to button.css . and minute chnages around buttons using in landing page.

--- a/Component/Alert/alert.html
+++ b/Component/Alert/alert.html
@@ -15,7 +15,7 @@
         <div class="main-content">
         
             <h2 class="heading-1">Alert </h2>
-            <p>Alerts are important information prompts that needs to user attention. Here are few alerts you can make use off</p>
+            <p>Alerts are important information prompts that needs to user attention. Here are few alerts you can make use of.</p>
             
             <div class="main-content-display">
 
