--- a/Component/Alert/alert.html
+++ b/Component/Alert/alert.html
@@ -18,7 +18,7 @@
             <p>Alerts are important information prompts that needs to user attention. Here are few alerts you can make use of.</p>
             
             <div class="main-content-display">
-
+                <li class="alert "> This is a default alert</li>
                 <li class="alert alert-primary"> This is a primary alert</li>
                 <li class="alert alert-success"><i class="fas fa-check-square"></i> This is a success alert</li>
                 <li class="alert alert-error"><i class="fas fa-exclamation-circle"></i> This is an error alert</li>
@@ -31,22 +31,25 @@
                 
                 <span class="example-comment">Note: The icons used are from fontawesome. You need to add their link to use the icons from the code below<br> <br>
                 
-                //Add class "avatar"  to your <<!-- -->img> to use this</span> <br>
+                //default alert  <br> </span>
+                <<!---->li class="alert "> This is a default alert<<!---->/li> <br> <br>
+
+                <span class="example-comment">//primary alert</span> <br>
                 <<!---->li class="alert alert-primary"> This is a primary alert<<!---->/li> <br><br>
 
-                <span class="example-comment"> //Add class "avatar"  to your <<!-- -->img> to use this</span> <br>
+                <span class="example-comment"> //Success alert</span> <br>
                 <<!---->li class="alert alert-success"><<!---->>i class="fas fa-check-square"><<!---->>/i> This is a success alert<<!---->/li> <br><br>
 
-                <span class="example-comment"> //Add class "avatar"  to your <<!-- -->img> to use this</span> <br>
+                <span class="example-comment"> //Error alert</span> <br>
                 <<!---->li class="alert alert-error"><<!---->i class="fas fa-exclamation-circle"><<!---->/i> This is an error alert<<!---->/li> <br><br>
 
-                <span class="example-comment"> //Add class "avatar"  to your <<!-- -->img> to use this</span> <br>
+                <span class="example-comment"> //Warning alert</span> <br>
                 <<!---->li class="alert alert-warning"><<!---->i class="fas fa-exclamation-triangle"><<!---->/i> This is a warning alert<<!---->/li> <br><br>
 
-                <span class="example-comment"> //Add class "avatar"  to your <<!-- -->img> to use this</span> <br>
+                <span class="example-comment"> //Light theme alert</span> <br>
                 <<!---->li class="alert alert-light">This is Light color alert<<!---->/li> <br><br>
 
-                <span class="example-comment"> //Add class "avatar"  to your <<!-- -->img> to use this</span> <br>
+                <span class="example-comment"> //dark theme alert</span> <br>
                 <<!---->li class="alert alert-dark"> This is Dark alert<<!---->/li> <br><br>
              </div>
 
