--- a/Component/Badge/badge.html
+++ b/Component/Badge/badge.html
@@ -101,10 +101,10 @@
                     <<!-- -->span class=" badge-icon badge-status red"><<!-- -->/span> <br>
                <<!-- -->/div><br> <br>
 
-               <span class="example-comment"> //red badge</span> <br> 
+               <span class="example-comment"> //yellow badge</span> <br> 
                 <<!-- -->div class="badge "> <br>
                     <<!-- -->img class="avatar" src="/Images/girl.png" alt=""> <br>
-                    <<!-- -->span class=" badge-icon badge-status red"><<!-- -->/span> <br>
+                    <<!-- -->span class=" badge-icon badge-status yellow"><<!-- -->/span> <br>
                <<!-- -->/div><br> <br>
 
            
