--- a/Component/button/button.css
+++ b/Component/button/button.css
@@ -2,6 +2,7 @@
 
 
 .btn{
+
     font-family: inherit;
     font-size: inherit;
     border:none;
@@ -30,7 +31,8 @@
 }
 
  .btn-outline{
-     border:0.25rem solid var(--primary);
+     outline:0.25rem solid var(--primary);
+     outline-offset: -0.25rem;
      color:var(--primary);
      background-color: var(--off-white); 
  }
