--- a/CSS/docs.css
+++ b/CSS/docs.css
@@ -26,6 +26,7 @@
     border-radius: 4px;
     background-color: var(--example-bg);
     justify-content: space-around;
+    align-content: space-between;
     padding: 1rem;
     margin: 1.5rem 0;
     flex-wrap: wrap;
@@ -39,7 +40,7 @@
     background-color: var(--primary);
    color: var(--off-white);
    padding: 1rem;
-    margin:  0 1.5rem 4rem 1.5rem;
+    margin:  0 1.5rem 6rem 1.5rem;
 }
 
 .example-comment{
