--- a/Component/cards/cards.html
+++ b/Component/cards/cards.html
@@ -90,6 +90,53 @@
            <<!-- -->/div>
         </div>
 
+        <h3>Card with Text Overlay</h3>
+        <p>add "overlay" class to the element which you want to display as the overlaying text.</p>
+        <div class="main-content-display">
+
+            <div class="card ">
+                <img  class="card-image" src="/Images/card-image.jpg" alt="">
+
+                <div class="card-title">
+                    <h2 class="heading-2">Lorem ipsum</h2>
+                    <h5 class="card-subheading">dolor sit amet consectetur </h5>
+                </div>
+                
+                <p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
+
+                <div class="card-footer">
+                    <div class="footer-buttons"><button class="btn"> lorem</button></div>
+                    <div class="footer-icons"><i class="far fa-heart icon"></i><!-- <i class="fas fa-heart"></i> --><i class="fas fa-share-alt icon"></i></div>
+                </div>
+                
+                <h4 class="overlay">
+                    Text Overlay
+                </h4>
+           </div>
+        </div>
+
+        <div class="main-content-example">
+            <<!-- -->div class="card "> <br>
+                <<!-- -->img  class="card-image" src="/Images/card-image.jpg" alt=""><br>
+
+                <<!-- -->div class="card-title"> <br>
+                    <<!-- -->h2 class="heading-2">Lorem ipsum<<!-- -->/h2> <br>
+                    <<!-- -->h5 class="card-subheading">dolor sit amet consectetur <<!-- -->/h5> <br>
+                <<!-- -->/div> <br>
+                
+                <<!-- -->p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.<<!-- -->/p> <br>
+
+                <<!-- -->div class="card-footer"> <br>
+                    <<!-- -->div class="footer-buttons"><<!-- -->button class="btn"> lorem<<!-- -->/button><<!-- -->/div> <br>
+                    <<!-- -->div class="footer-icons"><<!-- -->i class="far fa-heart icon"><<!-- -->/i><<!-- -->!-- <<!-- -->i class="fas fa-heart"><<!-- -->/i> --><<!-- -->i class="fas fa-share-alt icon"><<!-- -->/i><<!-- -->/div> <br>
+                <<!-- -->/div>
+                
+                <<!---->h4 class="overlay">
+                    Text Overlay
+                <<!---->/h4>
+           <<!-- -->/div>
+        </div>
+
         <h3>Card with Badge and/or Dismissable</h3>
         <p>You can have any of the combination displayed below. Just remove the div which you dont like.</p>
         <div class="main-content-display">
@@ -176,14 +223,14 @@
             <<!---->/div>
         </div>
 
-        <h3>Card with Text Overlay</h3>
-        <p>Add class "overlay" to have the text displayed over image. Here the title has the "overlay" class</p>
+        <h3>Card with Text on Image</h3>
+        <p>Add class "on-image" to have the text displayed over image. Here the title has the "overlay" class</p>
         <div class="main-content-display">
 
             <div class="card ">
                 <img  class="card-image" src="/Images/card-image.jpg" alt="">
 
-                <div class="card-title overlay">
+                <div class="card-title on-image">
                     <h2 class="heading-2">Lorem ipsum</h2>
                     <h5 class="card-subheading">dolor sit amet consectetur </h5>
                 </div>
