--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -1,3 +1,5 @@
+@import url(/CSS/main.css);
+@import url(/Component/Text-Utilies/text-utilities.css);
 nav{
     font-size:2rem;
   padding: 2.5rem 1rem;
