refactor: added classes to elements

--- a/Component/Image/image.html
+++ b/Component/Image/image.html
@@ -12,7 +12,7 @@
         
         <h1 class="heading-1">Images</h1>
         <h3>Responsive Image</h3>
-        <p>Reponsive Image will let your image to resize itself according to your screen.Here the Image adjusts itself according to its parent container. </p>
+        <p class="para">Reponsive Image will let your image to resize itself according to your screen.Here the Image adjusts itself according to its parent container. </p>
             
         <div class="main-content-display">
             <div class="image-container">
@@ -28,7 +28,7 @@
         </div>
 
         <h3>Round Image</h3>
-        <p>Here the images are by default 10rem for width and height. </p>
+        <p class="para">Here the images are by default 10rem for width and height. </p>
             
         <div class="main-content-display">
 
