--- a/Component/cards/cards.html
+++ b/Component/cards/cards.html
@@ -23,7 +23,7 @@
                     <h5 class="card-subheading">dolor sit amet consectetur </h5>
                 </div>
                 
-                <p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
+               <p class="para">Visit ten places on our planet that are undergoing the biggest changes today.</p>
 
                 <div class="card-footer">
                     <div class="footer-buttons"><button class="btn"> lorem</button></div>
@@ -40,7 +40,7 @@
                     <<!-- -->h5 class="card-subheading">dolor sit amet consectetur <<!-- -->/h5>
                 <<!-- -->/div> <br>
                 
-                <<!-- -->p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.<<!-- -->/p> <br>
+                <<!-- -->p>Visit ten places on our planet that are undergoing the biggest changes today.<<!-- -->/p> <br>
 
                 <<!-- -->div class="card-footer"> <br>
                     <<!-- -->div class="footer-buttons"><<!-- -->button class="btn"> lorem<<!-- -->/button><<!-- -->/div> <br>
@@ -61,7 +61,7 @@
                     <h5 class="card-subheading">dolor sit amet consectetur </h5>
                 </div>
                 
-                <p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
+               <p class="para">Visit ten places on our planet that are undergoing the biggest changes today.</p>
 
                 <div class="card-footer">
                     <div class="footer-buttons"><button class="btn"> lorem</button></div>
@@ -80,7 +80,7 @@
                     <<!-- -->h5 class="card-subheading">dolor sit amet consectetur <<!-- -->/h5> <br>
                 <<!-- -->/div> <br>
                 
-                <<!-- -->p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.<<!-- -->/p> <br>
+                <<!-- -->p>Visit ten places on our planet that are undergoing the biggest changes today.<<!-- -->/p> <br>
 
                 <<!-- -->div class="card-footer"> <br>
                     <<!-- -->div class="footer-buttons"><<!-- -->button class="btn"> lorem<<!-- -->/button><<!-- -->/div> <br>
@@ -91,7 +91,7 @@
         </div>
 
         <h3>Card with Text Overlay</h3>
-        <p>add "overlay" class to the element which you want to display as the overlaying text.</p>
+       <p class="para">add "overlay" class to the element which you want to display as the overlaying text.</p>
         <div class="main-content-display">
 
             <div class="card ">
@@ -102,7 +102,7 @@
                     <h5 class="card-subheading">dolor sit amet consectetur </h5>
                 </div>
                 
-                <p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
+               <p class="para">Visit ten places on our planet that are undergoing the biggest changes today.</p>
 
                 <div class="card-footer">
                     <div class="footer-buttons"><button class="btn"> lorem</button></div>
@@ -124,7 +124,7 @@
                     <<!-- -->h5 class="card-subheading">dolor sit amet consectetur <<!-- -->/h5> <br>
                 <<!-- -->/div> <br>
                 
-                <<!-- -->p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.<<!-- -->/p> <br>
+                <<!-- -->p>Visit ten places on our planet that are undergoing the biggest changes today.<<!-- -->/p> <br>
 
                 <<!-- -->div class="card-footer"> <br>
                     <<!-- -->div class="footer-buttons"><<!-- -->button class="btn"> lorem<<!-- -->/button><<!-- -->/div> <br>
@@ -138,7 +138,7 @@
         </div>
 
         <h3>Card with Badge and/or Dismissable</h3>
-        <p>You can have any of the combination displayed below. Just remove the div which you dont like.</p>
+       <p class="para">You can have any of the combination displayed below. Just remove the div which you dont like.</p>
         <div class="main-content-display">
             
             <div class="card ">
@@ -152,7 +152,7 @@
                     <h5 class="card-subheading">dolor sit amet consectetur </h5>
                 </div>
                 
-                <p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
+               <p class="para">Visit ten places on our planet that are undergoing the biggest changes today.</p>
 
                 <div class="card-footer">
                     <div class="footer-buttons"><button class="btn"> lorem</button></div>
@@ -171,7 +171,7 @@
                     <h5 class="card-subheading">dolor sit amet consectetur </h5>
                 </div>
                 
-                <p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
+               <p class="para">Visit ten places on our planet that are undergoing the biggest changes today.</p>
 
                 <div class="card-footer">
                     <div class="footer-buttons"><button class="btn"> lorem</button></div>
@@ -191,7 +191,7 @@
                     <h5 class="card-subheading">dolor sit amet consectetur </h5>
                 </div>
                 
-                <p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
+               <p class="para">Visit ten places on our planet that are undergoing the biggest changes today.</p>
 
                 <div class="card-footer">
                     <div class="footer-buttons"><button class="btn"> lorem</button></div>
@@ -214,7 +214,7 @@
                     <<!---->h5 class="card-subheading">dolor sit amet consectetur <<!---->/h5>
                 <<!---->/div> <br>
                 
-                <<!---->p class="card-body">ten places on our planet that are undergoing the biggest changestoday.<<!---->/p><br>
+                <<!---->p>ten places on our planet that are undergoing the biggest changestoday.<<!---->/p><br>
 
                 <<!---->div class="card-footer"><br>
                     <<!---->div class="footer-buttons"><<!---->button class="btn"> lorem<<!---->/button><<!---->/div><br>
@@ -224,7 +224,7 @@
         </div>
 
         <h3>Card with Text on Image</h3>
-        <p>Add class "on-image" to have the text displayed over image. Here the title has the "overlay" class</p>
+       <p class="para">Add class "on-image" to have the text displayed over image. Here the title has the "overlay" class</p>
         <div class="main-content-display">
 
             <div class="card ">
@@ -272,7 +272,7 @@
                         <h5 class="card-subheading">dolor sit amet consectetur </h5>
                     </div>
                     
-                    <p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
+                   <p class="para card-body">Visit ten places on our planet that are undergoing the biggest changes today.</p>
     
                     <div class="card-footer">
                         <div class="footer-buttons"><button class="btn"> lorem</button></div>
@@ -293,7 +293,7 @@
                         <<!---->h5 class="card-subheading">dolor sit amet consectetur <<!---->/h5>
                     <<!---->/div><br>
                     
-                    <<!---->p class="card-body">Visit ten places on our planet that are undergoing the biggest changes today.<<!---->/p><br>
+                    <<!---->p>Visit ten places on our planet that are undergoing the biggest changes today.<<!---->/p><br>
     
                     <<!---->div class="card-footer"><br>
                         <<!---->div class="footer-buttons"><<!---->button class="btn"> lorem<<!---->/button><!---->/div><br>
