--- a/Component/Text-Utilies/text-utilities.html
+++ b/Component/Text-Utilies/text-utilities.html
@@ -12,7 +12,7 @@
         
         <h1 class="heading-1">Text Utilities</h1>
         <h3>Headings</h3>
-        <p>The heading are as the default heading given by the browser. Heading 1 and 2 can have the theme's primary color while others  have the theme's text color</p>
+        <p class="para">The heading are as the default heading given by the browser. Heading 1 and 2 can have the theme's primary color while others  have the theme's text color</p>
         
         <div class="main-content-display">
             <h1 class="heading-1">Lorem ipsum dolor sit.</h1>
@@ -44,7 +44,7 @@
         </div>
         
         <h1 class="heading-1">Other variations</h1>
-        <p>Here you can find other variations.</p>
+        <p class="para">Here you can find other variations.</p>
         <h3>Small text</h3>
         <div class="main-content-display">
             <small >
@@ -56,7 +56,7 @@
 
         <h3>Grey Text</h3>
         <div class="main-content-display">
-            <p class="grey-text"><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit dolores vero ratione nostrum voluptates nam culpa enim!<br></p>
+            <p class="para grey-text"><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit dolores vero ratione nostrum voluptates nam culpa enim!<br></p>
         </div>
         <div class="main-content-example">
             <<!---->p class="grey-text"><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit dolores vero ratione nostrum voluptates nam culpa enim!<br><<!---->/p>
@@ -64,18 +64,18 @@
        
         <h3>Centered Text</h3>
         <div class="main-content-display">
-            <p class="center-text"><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit dolores vero ratione nostrum voluptates nam culpa enim!<br></p>
+            <p class="para center-text"><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit dolores vero ratione nostrum voluptates nam culpa enim!<br></p>
         </div>
         <div class="main-content-example">
             <<!---->p class="center-text"><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit dolores vero ratione nostrum voluptates nam culpa enim!<br><<!---->/p>
         </div>
 
         <h3>Miscellaneous</h3>
-        <p>Some of the defaulted cases. You can overight them accordingly.</p>
+        <p class="para">Some of the defaulted cases. You can overight them accordingly.</p>
         <ul class="misc">
-            <li>Paragraphs are by defaulted to be justified from both the sides.</li>
-            <li>Lists dont have bullets for all components. They have a margin of 1rem top and bottom.</li>
-            <li>Anchor tags have no text decoration and they inherit the color from parent. </li>
+            <li class="list ">Paragraphs have class para to justfy them from both sides</li>
+            <li class="list ">Lists have class list so that they dont have bullets for all components. They have a margin of 1rem top and bottom.</li>
+            <li class="list ">Anchor tags have class link which makes them have no text decoration and they inherit the color from parent. </li>
 
         </ul>
         
