--- a/Component/cards/cards.css
+++ b/Component/cards/cards.css
@@ -14,6 +14,9 @@
     position: relative;
 }
 
+.card .para{
+    margin:0.75rem 0rem 0.75rem 0rem
+}
 .card-horizontal{
     display: flex;
    width: 45rem;
