--- a/Component/Avatar/avatar.html
+++ b/Component/Avatar/avatar.html
@@ -16,7 +16,7 @@
             <h1 class="heading-1">Avatar</h1>
 
             <h3>Image Avatars</h3>
-            <p class="para"> Below the second avatar is the default size. According to your requirments you can use the smaller or the larger version on it. </p>
+            <p> Below the second avatar is the default size. According to your requirments you can use the smaller or the larger version on it. </p>
             <div class="main-content-display">
                 <img class="avatar sm " src="/Images/girl.png" alt="">
                 <img class="avatar" src="/Images/girl.png" alt="">
@@ -29,7 +29,7 @@
             </div>
 
             <h3>Other Variation</h3>
-            <p class="para">You can find the other variations of the avatar below. Just add the class and you good to go!</p>
+            <p>You can find the other variations of the avatar below. Just add the class and you good to go!</p>
             <div class="main-content-display">
                 <div class=" avatar avatar-text" >NS</div>
                 <div class="avatar avatar-icon" ><i class="fas fa-folder"></i></div>
