--- a/Component/button/button.html
+++ b/Component/button/button.html
@@ -14,7 +14,7 @@
         <h1 class="heading-1">Button</h1>
 
         <h3>Solid Buttons</h3>
-        <p class="para"> By default buttons will have theme color. You have the other colors from this library as below.</p>
+        <p> By default buttons will have theme color. You have the other colors from this library as below.</p>
         <div class="main-content-display">
            <button class="btn ">Button</button>
            <button class="btn green">Button</button>
@@ -32,7 +32,7 @@
         </div>
 
         <h3>Outline buttons</h3>
-        <p class="para">Similarly you can have  outline variation of buttons</p>
+        <p>Similarly you can have  outline variation of buttons</p>
         <div class="main-content-display">
             <button class="btn btn-outline">Button</button>
             <button class="btn btn-outline-red">Button</button>
@@ -51,9 +51,9 @@
         </div>
 
         <h3>Other variations</h3>
-        <p class="para">Here you can other variation of the buttons. To have the colours from the theme add repectively class to it, you can refer the solid buttons example for that. </p>
+        <p>Here you can other variation of the buttons. To have the colours from the theme add repectively class to it, you can refer the solid buttons example for that. </p>
         <div class="main-content-display">
-            <button class="btn btn-link"><a class="link" href="#">Link</a></button>
+            <button class="btn btn-link"><a href="#">Link</a></button>
             <button class="btn "><i class="fas fa-user"></i></button>
             <button class="btn btn-float"><i class="fas fa-plus"></i></button>
             <button class=" btn btn-white">Button</button>
