fea: added list component

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -16,6 +16,7 @@
     --off-white: #F5F7F9;
     --primary-hover:#0F292B;
     --primary: #1A4549;
+    --primary-ghost: #207b8377;
     --secondary:#f8fcfc;
     --grey-text:#656663;
     --background:#767879;
