fea: added text utilities and list

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mate&family=Vollkorn+SC:wght@600&display=swap');
+@import url(/Component/Text-Utilies/text-utilities.css);
 
 * {
     margin: 0;
@@ -14,6 +15,7 @@
     --off-white: #F5F7F9;
     --primary-hover:#0F292B;
     --primary: #1A4549;
+    --primary-ghost: #0f464b71;
     --secondary:#f8fcfc;
     --text:#656663;
     --background:#767879;
@@ -21,44 +23,6 @@
     --overlay-background: #0b090ad0;
 }
 
-html {
-    font-size: 62.5%;
-  }
- 
-body {
-    font-family: 'Mate', serif;
-    color:var(--text);
-
-}
-
-li{
-    list-style: none;
-    margin:1rem 0;
-    font-size:1.655rem;
-}
-
-.heading-1,.heading-2,hr{
-    color:var(--primary)
-}
-
-.heading-5{
-    font-weight: 400;
-}
-
-p{
-    text-align: justify;
-}
-
-
-ul{
-    margin:0.75rem;
-}
-
-a {
-    text-decoration: none;
-    cursor: pointer;
-    color: inherit;
-  }
 
 .container{
     width: 85%;
