--- a/Component/Badge/badge.html
+++ b/Component/Badge/badge.html
@@ -14,7 +14,7 @@
         <div class="main-content">
         
             <h1 class="heading-1">Badge</h1>
-            <p> Here you can find different badge like on text, on button and on a icon. Just copy the code below and you are all set!</p>
+            <p class="para"> Here you can find different badge like on text, on button and on a icon. Just copy the code below and you are all set!</p>
             <div class="main-content-display">
                 
                 <div class="badge">
@@ -69,7 +69,7 @@
            </div>
 
             <h3>Badge on avatar</h3>
-            <p>Need badge on avatar?. Here you go. You can have it's variation with the colours as below. </p>
+            <p class="para">Need badge on avatar?. Here you go. You can have it's variation with the colours as below. </p>
             <div class="main-content-display">
 
                 <div class="badge ">
