--- a/Component/Snackbar/snackbar.html
+++ b/Component/Snackbar/snackbar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="snackbar.css">
+    <script src="https://kit.fontawesome.com/0ce6b5a07c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
@@ -32,7 +33,7 @@
                     Can't send photo. Retry in 5 seconds.<br>
                 <<!---->/div><br>
                 <<!---->a class=" link snackbar-link" href="">Retry<<!---->/a><br>
-                <<!---->i class="fas fa-times"></i><br>
+                <<!---->i class="fas fa-times"><<!---->/i><br>
             <<!-- -->/div>
         </div>
         
