--- a/CSS/main.css
+++ b/CSS/main.css
@@ -36,7 +36,7 @@
       padding-top:9.5rem;
       width:80%;
       align-items: center;
-      font-size: 2.90rem;
+      font-size: 2.75rem;
 
       
   }
@@ -45,7 +45,10 @@
       font-weight: 900;
       text-align: center;
   }
-
+ .hero-para{
+     margin-top: 2rem;
+     text-align: center;
+ }
 .hero-buttons{
     display:inherit;
     margin:2rem;
