refactor: moved links from css files to html
importing css linkinto css files was creating a mess to moved these links to respective html files

--- a/Component/Badge/badge.html
+++ b/Component/Badge/badge.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/Component/Text-Utilies/text-utilities.css">
+    <link rel="stylesheet" href="/CSS/docs.css">
+    <link rel="stylesheet" href="/Component/Avatar/avatar.css">
     <link rel="stylesheet" href="badge.css">
+    
     <script src="https://kit.fontawesome.com/0ce6b5a07c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-    <div class="container">
         <div class="main-content">
         
             <h1 class="heading-1">Badge</h1>
