--- a/CSS/docs.css
+++ b/CSS/docs.css
@@ -1,7 +1,3 @@
-@import url(/CSS/nav.css);
-@import url(/Component/Text-Utilies/text-utilities.css);
-@import url(/CSS/main.css);
-
 
 .doc-container{
     margin-top:2.25rem;
@@ -71,9 +67,7 @@
 .main-content{
     display: flex;
     flex-direction: column;
-    width:98%;
-    margin:1rem 0 0 auto ;
-    height:inherit;
+    margin-left: 1rem;
     font-size: 2rem;
     gap:1rem;
 }
@@ -111,11 +105,33 @@
     scrollbar-width: 1px;
     width:100%; 
     height:100vh;
+    /* height:fit-content; */
+    /* height:max-content; */
+    /* overflow-y:none; */
+
+    
     
 }
 
-.document-frame::-webkit-scrollbar {
+.document-frame#frame1::-webkit-scrollbar {
     display: none;
+    
+
+}
+
+.document-frame::-webkit-scrollbar-track {
+    display:none;
+    scrollbar-color: blueviolet;
+    
+}
+
+body::-webkit-scrollbar-track {
+    display:none;
+ 
+}
+
+.document-frame::-webkit-scrollbar-thumb {
+    display:none;
 }
 
 
