--- a/Component/Alert/alert.html
+++ b/Component/Alert/alert.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/CSS/docs.css">
+    <link rel="stylesheet" href="/Component/Text-Utilies/text-utilities.css">
     <link rel="stylesheet" href="/Component/Alert/alert.css">
     <script src="https://kit.fontawesome.com/0ce6b5a07c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
-
-    <div class="container">
         <div class="main-content">
         
             <h1 class="heading-1">Alert </h1>
@@ -57,7 +57,7 @@
         </div>
 
 
-    </div>
+  
 
    
 </body>
