--- a/Component/Avatar/avatar.html
+++ b/Component/Avatar/avatar.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/Component/Text-Utilies/text-utilities.css">
+    <link rel="stylesheet" href="/CSS/docs.css">
     <link rel="stylesheet" href="avatar.css">
     <script src="https://kit.fontawesome.com/0ce6b5a07c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-    <div class="container">
         <div class="main-content">
         
             <h1 class="heading-1">Avatar</h1>
@@ -40,6 +40,6 @@
                <<!-- -->div class="avatar avatar-icon" ><<!-- -->i class="fas fa-folder"><<!-- -->/i><<!-- -->/div><span class="example-comment"> //Add "avatar-icon"   to the div of the icon for icon avatar</span> <br> <br>
                <<!-- -->img class="avatar avatar-square" src="/Images/girl.png" alt=""> <span class="example-comment"> //Add "avatar-square"  to your <<!-- -->img> for square avatar</span> <br> <br>
             </div>
-    </div>
+
 </body>
 </html>
