--- a/Component/List/list.html
+++ b/Component/List/list.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/Component/Text-Utilies/text-utilities.css">
+    <link rel="stylesheet" href="/CSS/docs.css">
+    <link rel="stylesheet" href="/Component/Avatar/avatar.css">
     <link rel="stylesheet" href="list.css">
 
 </head>
