--- a/Component/Ratings/ratings.html
+++ b/Component/Ratings/ratings.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/Component/Text-Utilies/text-utilities.css">
+    <link rel="stylesheet" href="/CSS/docs.css">
     <link rel="stylesheet" href="ratings.css">
     <script src="https://kit.fontawesome.com/0ce6b5a07c.js" crossorigin="anonymous"></script>
 </head>
