docs and refactor: changes in the textual error and some css

--- a/Component/cards/cards.html
+++ b/Component/cards/cards.html
@@ -251,7 +251,7 @@
             <<!-- -->div class="card "> <br>
                 <<!-- -->img  class="card-image" src="/Images/card-image.jpg" alt=""><br>
 
-                <<!-- -->div class="card-title overlay"> <br>
+                <<!-- -->div class="card-title"> <br>
                     <<!-- -->h2 class="heading-2">Lorem ipsum<<!-- -->/h2> <br>
                     <<!-- -->h5 class="card-subheading">dolor sit amet consectetur <<!-- -->/h5> <br>
                 <<!-- -->/div> <br>
